# MyMIDI

./: Cargo.toml  README.md  run_silently.vbs
media/: repository-open-graph-template.xcf
midi_key_mapper/: Cargo.toml
midi_key_mapper/src/: main.rs
my_midi/: Cargo.toml  run_silently.vbs
my_midi/src/: backup.rs  main.rs  midi_commands.rs  steelseries_sonar_api.rs  toast.rs  windows_volume_control.rs
my_midi/src/profiles/: default.rs  genshin.rs  mod.rs  zenless_zone_zero.rs
src/: main.rs
src/profiles/: default.rs  genshin.rs  mod.rs
