[package]
name = "MyMIDI"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
midir = { git = "https://github.com/Boddlnagg/midir", branch = "master" }
enigo = "*"
lazy_static = "1.4"
winapi = { version = "0.3", features = ["combaseapi", "endpointvolume", "mmdeviceapi", "winerror"] }

