[package]
name = "my_midi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
midir = { git = "https://github.com/Boddlnagg/midir", branch = "master" }
enigo = "*"
lazy_static = "1.4"
winapi = { version = "0.3", features = ["combaseapi", "endpointvolume", "mmdeviceapi"] }
windows-service = "0.4.0"
log = "0.4"
simplelog = "*"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
reqwest = { version = "0.11", features = ["json", "blocking"] }
rusqlite = { version = "0.26.0", features = ["bundled"] }