[package]
name = "my_midi"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "my_midi"
path = "src/main.rs"
# This line hides the console window
windows_subsystem = "windows"

[dependencies]
midir = { git = "https://github.com/Boddlnagg/midir", branch = "master" }
enigo = { git = "https://github.com/enigo-rs/enigo" }
lazy_static = "1.4"
winapi = { version = "0.3", features = ["combaseapi", "endpointvolume", "mmdeviceapi","winuser","shellapi"] }
windows-service = "0.4.0"
log = "0.4"
simplelog = "*"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
reqwest = { version = "0.11", features = ["json", "blocking"] }
rusqlite = { version = "0.26.0", features = ["bundled"] }
notify = "6.1.1"
ctrlc = "3.1.7"